# PNVIIKLSP

./: .gitmodules  CMakeLists.txt  LICENSE  main.cpp
buildold/: CMakeCache.txt  PNVIIKLSP
cmdline/: cmdfunctionloader.cpp  cmdregistry.cpp  helpcommand.cpp  inlinecommandhandler.cpp
include/: pnviiklsp.h
include/cmdline/: cmdfunctionloader.h  cmdregistry.h  commandhandler.h  helpcommand.h  inlinecommandhandler.h
include/math/: line.h  linearfunction.h  triangle.h  vertex.h  wezel.h
include/renderer/: color.h  colored.h  renderer.h
include/services/: functionservice.h
include/utils/: named.h
math/: line.cpp  linearfunction.cpp  triangle.cpp  vertex.cpp  wezel.cpp
renderer/: color.cpp  colored.cpp  renderer.cpp
services/: functionservice.cpp
utils/: named.cpp
